# Robomaster2020_Winter_Algorithm_Team_2

./: .gitignore  loop.sh  loop_test_game.sh  pid.py  plan.md  rules.md  run.sh  run_qt_tool.sh  run_ros_monitor.sh  run_simple_game.sh  run_simulator.sh  run_test_game.sh  test.sh
simple_bringup/: CMakeCache.txt
simple_bringup/simulator/: winter_camp.pgm
simple_planner/: CMakeLists.txt  local_planner.cpp  pid_planner.cpp  utility.h
src/: config.h  drawing.py  mat.py  physics.py
src/qt_tool/: calculate.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt_tool.pro  testdata.h
src/simple_bringup/: CMakeLists.txt  package.xml
src/simple_bringup/launch/: game.launch  planner.launch  simple_game.launch  simulator.launch  test_game.launch
src/simple_bringup/rviz/: winter_camp.rviz  winter_camp_kinetic.rviz
src/simple_bringup/simulator/: winter_camp.world  winter_camp.yaml
src/simple_game/: CMakeLists.txt  game.cpp  game.launch  package.xml  readme.md
src/simple_planner/: CMakeLists.txt  debug_utils.h  global_path_specifier.cpp  global_planner.cpp  graph  graph.cpp  graph.h  local_planner.cpp  my_local_planner.cpp  my_planner.cpp  package.xml  pid_planner.cpp  test  test.cpp  thread_pool.h
src/simple_planner/calculators/: a_star.h  climbing.h  hybrid.h  random.h
src/simple_planner/launch/: planner.launch
src/simple_planner/straight_line/: straight_line.h
src/statistics/: dial_plate.py  graph.py  preprocess.cpp
src/test_game/: CMakeLists.txt  package.xml
